# HeroSideUI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REFACTORING.md  extensions.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.hooks/: commit_msg_bump.py
docs/: PUBLISHING.md  accordion.md  autocomplete.md  button.md  card.md  checkbox.md  divider.md  font_provider.md  input.md  listbox.md  migration.md  popover.md  progress.md  scroll-shadow.md  scroll_style.md  smooth_scroll.md  spinner.md  switch.md  tabs.md  text.md  textarea.md  theme_provider.md  theme_switcher.md  tooltip.md
examples/: _base.py
examples/accordion/: dark_mode.py  demo.py  light_mode.py
examples/autocomplete/: demo.py
examples/button/: dark_mode.py  demo.py  light_mode.py
examples/card/: dark_mode.py  demo.py  light_mode.py
examples/checkbox/: dark_mode.py  demo.py  light_mode.py
examples/divider/: dark_mode.py  demo.py  light_mode.py
examples/input/: dark_mode.py  demo.py  light_mode.py
examples/listbox/: demo.py
examples/popover/: dark_mode.py  demo.py  light_mode.py
examples/progress/: dark_mode.py  demo.py  light_mode.py
examples/scroll_shadow/: demo.py
examples/spinner/: demo.py
examples/switch/: demo.py
examples/tabs/: dark_mode.py  demo.py  light_mode.py  login_signup.py
examples/text/: demo.py  diag.py
examples/textarea/: demo.py
examples/theme_toggle/: demo.py
examples/tooltip/: dark_mode.py  demo.py  light_mode.py
hero_side_ui/: __init__.py
hero_side_ui/animation/: __init__.py  backdrop_fade.py  check_draw.py  collapse.py  fade_scale.py  indeterminate.py  label_float.py  padding_squeeze.py  pixmap_scale_proxy.py  press_scale.py  ripple.py  spinner_loops.py  stripe_flow.py  tween.py  underline_expand.py
hero_side_ui/components/: __init__.py  accordion.py  autocomplete.py  button.py  card.py  checkbox.py  divider.py  input copy.py  input.py  listbox.py  popover.py  progress.py  scroll_shadow.py  switch.py  tabs.py  text.py  textarea.py  theme_switcher.py  tooltip.py
hero_side_ui/core/: __init__.py  _boot.py  font_provider.py  provider.py  scroll_style.py  smooth_scroll.py  state_palette.py  text_style.py  theme_provider.py
hero_side_ui/themes/: __init__.py  colors.py  font.py  radius.py  sizes.py
hero_side_ui/utils/: __init__.py  color_utils.py  icon_utils.py
tests/: README.md  __init__.py  conftest.py  test_accordion.py  test_autocomplete.py  test_button.py  test_card.py  test_checkbox.py  test_divider.py  test_input.py  test_popover.py  test_progress.py  test_scroll_style.py  test_smooth_scroll.py  test_state_palette.py  test_tabs.py  test_textarea.py  test_tooltip.py
tests/animation/: README.md  __init__.py  test_backdrop_fade.py  test_check_draw.py  test_collapse.py  test_fade_scale.py  test_indeterminate.py  test_label_float.py  test_padding_squeeze.py  test_pixmap_scale_proxy.py  test_press_scale.py  test_ripple.py  test_stripe_flow.py  test_tween.py  test_underline_expand.py
tests/components/: README.md  __init__.py  test_accordion.py  test_autocomplete.py  test_button.py  test_card.py  test_checkbox.py  test_divider.py  test_listbox.py  test_progress.py  test_scroll_shadow.py  test_spinner.py  test_switch.py  test_tabs.py  test_text.py  test_theme_switcher.py
tests/core/: README.md  __init__.py  test_font_provider.py  test_theme_provider.py
(+93 files in other folders)
