[project]
name = "herosideui"
version = "0.0.26"
description = "PySide6 component library inspired by HeroUI v2 design system"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [{name = "jerrylu"}]
keywords = ["pyside6", "qt", "ui", "heroui", "component-library", "design-system"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyside6>=6.11.0",
]

[project.urls]
Homepage = "https://github.com/LingChen-tsjmdlc/HeroSideUI"
Documentation = "https://github.com/LingChen-tsjmdlc/HeroSideUI/tree/main/docs"
Repository = "https://github.com/LingChen-tsjmdlc/HeroSideUI"
Issues = "https://github.com/LingChen-tsjmdlc/HeroSideUI/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# hatchling 会递归打包 hero_side_ui/ 下所有文件（包括 resources/ 里的 svg）
# 不要额外加 force-include，否则会导致 wheel 里出现重复文件条目，
# PyPI 会以 "Duplicate filename in local headers" 拒绝上传。
packages = ["hero_side_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "hero_side_ui/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
]
